# mini_motion

./: CMakeLists.txt  README.md
file/: 配置参数.txt  黑色配置参数v71.txt
file/mini/: model.config  model.sdf
file/mini/meshes/: 1_Link.STL  2_Link.STL  3_Link.STL  4_Link.STL  5_Link.STL  6_Link.STL  7_Link.STL  base_link.STL
file/tennis_ball/: model.config  model.sdf
include/: mini_motion.hpp  parabolic_motion.hpp
src/: mini_motion.cpp  parabolic_motion.cpp
world/: mini_motion.world  parabolic_motion.world
